--- a/src/App.css
+++ b/src/App.css
@@ -81,13 +81,13 @@ a{
   background-color: rgba(229, 156, 171, 0.3);
   padding-top: 6rem;
   width: 100%;
-  height: 130vh;
+  /* min-height: 130vh; */
   animation: mymove 5s infinite;
 }
 
 @keyframes mymove{
-  from {background-color: rgba(159, 86, 153, 0.3);}
-  to {background-color: rgba(108, 29, 126, 0.3);}
+  from {background-color: rgba(89, 40, 187, 0.3);}
+  to {background-color: rgba(99, 23, 116, 0.3);}
 }
 
 .home-card{
@@ -106,6 +106,7 @@ a{
 }
 
 /* styling book component*/
+
 
 .book-card{
    min-height: 100vh;
@@ -127,7 +128,7 @@ a{
 }
 
 Button .btn-primary{
-  background-color: blueviolet;
+  background-color:rgb(228, 114, 137) important! ;
 }
 
 .book-card h2{
@@ -176,18 +177,32 @@ Button .btn-primary{
   font-family: 'Oswald';
   display: flex;
   justify-content: space-between;
+
 }
 
-.cate-flex h3{
+.cate-flex h5{
   font-weight: bolder;
+  margin-bottom: 3rem;
   
 }
 
-.cate-flex h4{
+.cate-flex h6{
   font-weight: bolder;
+  margin-bottom: 3rem;
+  margin-right: 2rem;
   
 }
 
-.card-footer{
-  background-color: blueviolet;
+.card-social{
+  font-size: 6rem;
+  color: rgb(228, 114, 137);
+  text-align: center;
+  
+
+
 }
+
+ .myimgage{
+  width: 10rem;
+}
+
