--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,6 @@ a{
   background-color: rgba(229, 156, 171, 0.3);
   padding-top: 6rem;
   width: 100%;
-  /* min-height: 130vh; */
   animation: mymove 5s infinite;
 }
 
@@ -203,5 +202,21 @@ Button .btn-primary{
 
  .myimgage{
   width: 10rem;
+}
+
+/* styling the footer*/
+.book-footer{
+  background-color: rgba(119, 27, 123, 0.5);
+  height: 6rem;
+  width: 100%;
+  color: white;
+  font-family: "Oswald";
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  padding-top: 3rem;
+
+  
 }
 
