book data added

--- a/src/App.css
+++ b/src/App.css
@@ -206,7 +206,7 @@ Button .btn-primary{
 
 /* styling the footer*/
 .book-footer{
-  background-color: rgba(119, 27, 123, 0.5);
+  background-color: rgb(118, 64, 138);
   height: 6rem;
   width: 100%;
   color: white;
