increased showcase title font size

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ a{
 
 /* styling the showcase */
 .text{
-  font-size: 2rem;
+  /* font-size: 2rem; */
   text-align: center;
   padding-top: 10rem;
   font-weight: bolder;
